--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,7 @@ url: http://yoursite.com
 title: The 1st International Workshop on Test Oracles
 email: iwto.workshop@gmail.com
 author: Jahangirova Gunel and Valerio Terragni
-description: > # "Write an awesome description for your new site here. 
-  You can edit this line in _config.yml. It will appear in your document 
-  head meta (for Google search results) and in your feed.xml site 
-  description.
+description: The 1st International Workshop on Test Oracles collocated with ESEC/FSE 2021.
 copyright: 'Copyright &copy; 2021 Jahangirova Gunel and Valerio Terragni. All Rights Reserved.'
 credits: 'Credits: Landing Page is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com/">Start Bootstrap</a>.'
 
